public/style.css
html {
  font-family: 'Roboto', sans-serif;
}

header {
  background-color: rgb(196, 196, 196);
  padding: 0.5em;
  display: flex;
}

header form {
  display: inline-block;
  display: flex;
  align-items: center;
}

header form input {
  align-self: center;
  border: none;
  padding:0.5em;
}

.logo {
  margin-right: 0.2em;
  display: inline-block;
  width: 1em;
  height: 1em;
  background: url(icon.svg);
  background-size: 1em, 1em;
}

header h1 a{
  display: inline-block;
  font-size: 2em;
}

section h2 {
  font-size: 1.5em;
}

a {
  cursor: pointer;
  text-decoration: none;
  color: black;
}

.flex-container {
  display: flex;
  flex-wrap: nowrap;
}

.main {
  flex-grow: 3;
}

.aside {
  margin:0.5em;
}

.list-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  margin: 0.5em;
}

.item {
  box-shadow: 3px 3px 10px #888888;
  border-style: solid;
  margin: 0.5em 0.25em 0.5em 0.25em;
}

section.item:last-child{
  margin-bottom: 5em;
}

.form {
  display: flex;
  flex-direction: column;
  padding: 0.5em;
  text-align: right;
}

.search {
  border-radius: 3px;
  padding-left: 40px;
  width: 100%;
  background-origin: padding-box;
  background-position-x: 10px;
  background-position-y: center;
  background-image: url(iconmonstr-magnifier-2.svg);
  background-repeat: no-repeat;
  background-size: 20px, 20px;
  height: 24px;
}

.album-text {
  vertical-align: top;
  display: inline-block;
}

.text-element {
  display: flex;
  align-items: center;
}

.cog {
  margin-left: 0.3em;
  opacity: 0;
  transition: visibility 0s linear 0.1s, opacity 0.1s linear;
  visibility: hidden;
  width: 1em;
  height: 1em;
  display: inline-block;
  background-image: url(iconmonstr-gear-1.svg);
  background-size: 1em;
}

.album-text .text-element:hover .cog {
  transition-delay: 0s;
  opacity: 1;
  visibility: visible;
}

.album {
  display: inline-block;
  height:100px;
  width:100px;
}

.stock-box {
  font-size: 1.5em;
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 100px;

}

.end {
  margin-left: auto;
}

.stock-control-group {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

.stock-control-button {
  background-size: 10px 10px;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
  -webkit-appearance: none;
  height: 50px;
  width: 50px;
  border: none;
  border-left-style: solid;
  border-left-width: 1px;
  transition: background-color 0.2s ease;
}

.plus {
  background-image: url(iconmonstr-plus-2.svg);
}

.minus {
  background-image: url(iconmonstr-minus-2.svg);
}

.stock-control-group form:last-child input{
  border-top-style: solid;
  border-top-width: 1px;
}

.stock-control-button:hover {
  background-color: rgb(164, 161, 161);
}

.contents {
  display: flex;
}

.hidden {
  display: none;
}

.low {
  background-color: #4CAF50;
}

.medium {
  background-color: #FF9800;
}

.high {
  background-color: #F44336;
}

@media (max-width: 930px) {
  .flex-container {
    flex-wrap: wrap;
  }
}
@media (max-width: 750px) {
    .stock-box{
      min-width: 50px;
    }
}

@media (max-width: 370px) {
  header h1 a{
    font-size: 1.5em;
  }
}

@media (max-width: 340px) {

  .album {
    width: 80px;
    height:80px;
  }
  .stock-control-button {
    width: 40px;
    height: 40px;
  }
  .search {
    width: 80px;
  }
}


#mobile-filter {
  margin-left: auto;
}

@media (max-width: 620px) {
  #mobile-filter {
    display: visible;
  }
  #desktop-filter {
    display: none;
  }
}

@media (min-width: 621px) {
  #mobile-filter {
    display: none;
  }
  #desktop-filter {
    display: visible;
  }
  header form {
    margin-left: auto;
  }
}

